--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eris": "^0.15.1",
     "logging-ts": "git+https://github.com/jimchen5209/Logging-TS.git",
     "node-telegram-bot-api": "0.54.0",
-    "opusscript": "^0.0.8"
+    "opusscript": "^0.0.8",
+    "status-client": "https://github.com/jimchen5209/StatusClient_JS#dev"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.51.1",
