--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "description": "",
   "dependencies": {
+    "async-wait-until": "^2.0.12",
     "dayjs": "^1.10.5",
     "eris": "^0.16.1",
     "node-telegram-bot-api": "0.56.0",
