--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "node dist",
     "install": "cd Libs/LicsonMixer && node-gyp configure build",
+    "postinstall": "patch-package",
     "lintTest": "eslint src/ --max-warnings 0",
     "lintFix": "eslint src/ --fix",
     "build": "tsc --pretty",
@@ -20,6 +21,8 @@
     "eris": "^0.16.1",
     "node-telegram-bot-api": "0.56.0",
     "opusscript": "^0.0.8",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "status-client": "jimchen5209/StatusClient_JS#2.0.0",
     "tslog-helper": "jimchen5209/TSLog-Helper#2.1.0"
   },
