--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.10.0",
+    "node-gyp": "^9.3.1",
     "typescript": "^4.5.5"
   },
   "optionalDependencies": {
@@ -40,5 +41,6 @@
     "erlpack": "github:abalabahaha/erlpack",
     "node-addon-api": "^6.0.0",
     "sodium-native": "^4.0.1"
-  }
+  },
+  "packageManager": "yarn@3.5.0"
 }
