--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 12,
+        "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "plugins": [
@@ -18,7 +18,10 @@
     "rules": {
         "indent": [
             "warn",
-            4
+            4,
+            {
+                "SwitchCase": 1
+            }
         ],
         "linebreak-style": [
             "warn",
@@ -30,8 +33,22 @@
         ],
         "semi": [
             "warn",
-            "always"
+            "never"
         ],
+        "eqeqeq": "error",
+        "no-unused-vars": "warn",
+        "no-trailing-spaces": "warn",
+        "camelcase": "error",
+        "no-dupe-else-if": "error",
+        "no-var": "error",
+        "no-useless-return": "error",
+        "no-else-return": "error",
+        "no-empty": "error",
+        "space-before-function-paren": "warn",
+        "space-in-parens": "warn",
+        "space-before-blocks": "warn",
+        "comma-dangle": "warn",
+        "no-duplicate-imports": "error",
         "@typescript-eslint/explicit-module-boundary-types": 0
     }
 }
