--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "optionalDependencies": {
     "@discordjs/opus": "0.9.0",
     "bufferutil": "^4.0.8",
-    "erlpack": "github:abalabahaha/erlpack",
+    "erlpack": "^0.1.4",
     "node-addon-api": "^6.1.0",
     "sodium-native": "^4.0.4"
   },
