--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tslog-helper": "jimchen5209/TSLog-Helper#v2.3.0"
   },
   "devDependencies": {
+    "@types/node": "^20.9.1",
     "@types/node-telegram-bot-api": "^0.61.11",
     "@types/ws": "^8.5.9",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
