--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,22 +8,27 @@ jobs:
 
     steps:
     - name: Check out code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
-    - name: Setup node
-      uses: actions/setup-node@v2.4.1
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v4
       with:
-        node-version: 16.x
+        node-version: '20'
+        # cache: 'yarn'
 
-    - name: Restore cache
-      uses: actions/cache@v2.1.4
+    - name: Cache dependencies
+      uses: actions/cache@v3
       with:
         path: |
-          .yarn/cache
           node_modules
         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: ${{ runner.os }}-yarn-
 
-    - run: yarn install
+    - name: Use corepack
+      run: corepack enable
 
-    - run: yarn build
+    - name: Install Dependencies
+      run: yarn install --immutable
+
+    - name: Build
+      run: yarn build
