--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "description": "",
   "dependencies": {
+    "@projectdysnomia/dysnomia": "^0.2.3",
     "async-wait-until": "^2.0.27",
     "dayjs": "^1.11.13",
-    "eris": "patch:eris@npm%3A0.18.0#~/.yarn/patches/eris-npm-0.18.0-57724b4df9.patch",
     "lodash": "^4.17.21",
     "node-telegram-bot-api": "0.66.0",
     "opusscript": "^0.1.1",
