--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "description": "",
   "dependencies": {
-    "@projectdysnomia/dysnomia": "^0.2.3",
+    "@projectdysnomia/dysnomia": "patch:@projectdysnomia/dysnomia@npm%3A0.2.3#~/.yarn/patches/@projectdysnomia-dysnomia-npm-0.2.3-f9fe380f79.patch",
     "async-wait-until": "^2.0.27",
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
