--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "tslog": "^4.9.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.0",
+    "@eslint/js": "^9.30.1",
     "@stylistic/eslint-plugin": "^5.1.0",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^22.15.33",
+    "@types/node": "^22.16.0",
     "@types/node-telegram-bot-api": "^0.64.9",
     "@types/ws": "^8.18.1",
-    "eslint": "^9.30.0",
+    "@typescript-eslint/types": "^8.36.0",
+    "eslint": "^9.30.1",
     "globals": "^16.3.0",
     "node-gyp": "^11.2.0",
     "typescript": "^5.8.3",
