chore: add labels to renovate pr

--- a/renovate.json
+++ b/renovate.json
@@ -3,11 +3,59 @@
   "extends": [
     "config:recommended"
   ],
+  "labels": [
+    "type:dependencies"
+  ],
   "schedule": [
     "after 11pm every weekend",
     "before 8am every weekend"
   ],
   "packageRules": [
+    {
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
+      "automerge": false,
+      "addLabels": [
+        "update:minor"
+      ]
+    },
+    {
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
+      "matchCurrentVersion": "!/^0/",
+      "automerge": false,
+      "addLabels": [
+        "status:ready-to-merge"
+      ]
+    },
+    {
+      "matchUpdateTypes": [
+        "major"
+      ],
+      "automerge": false,
+      "addLabels": [
+        "update:major"
+      ]
+    },
+    {
+      "matchUpdateTypes": [
+        "pin", 
+        "pinDigest", 
+        "digest", 
+        "lockFileMaintenance",
+        "rollback", 
+        "bump", 
+        "replacement"
+      ],
+      "automerge": false,
+      "addLabels": [
+        "update:misc"
+      ]
+    },
     {
       "groupName": "eslint packages",
       "matchPackageNames": [
@@ -21,14 +69,20 @@
       ]
     },
     {
+      "matchManagers": [
+        "npm"
+      ],
+      "addLabels": [
+        "package:npm"
+      ]
+    },
+    {
       "groupName": "GitHub Actions",
       "matchManagers": [
         "github-actions"
       ],
-      "matchPackageNames": [
-        "actions/checkout",
-        "actions/setup-node",
-        "actions/cache"
+      "addLabels": [
+        "package:github-actions"
       ]
     }
   ]
